<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FCEAEA">

    <ScrollView
        android:id="@+id/tos_scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_agree">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp"
            android:gravity="center_horizontal">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_image_placeholder2" />

            <TextView
                style="@style/TxtTitle"
                android:layout_marginTop="16dp"
                android:text="Lottery Guidelines" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="24dp">

                <TextView style="@style/TxtTos" android:text="@string/tos_p1" />
                <TextView style="@style/TxtTos" android:text="@string/tos_p2" />
                <TextView style="@style/TxtTos" android:text="@string/tos_p3" />
                <TextView style="@style/TxtTos" android:text="@string/tos_p4" />
                <TextView style="@style/TxtTos" android:text="@string/tos_p5" />
                <TextView style="@style/TxtTos" android:text="@string/tos_p6" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_agree"
        style="@style/Button.Filled"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="48dp"
        android:text="I agree"
        app:layout_constraintTop_toBottomOf="@id/tos_scroll"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>