<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_nav_container"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:orientation="horizontal"
    android:background="#FAFAFA"
    android:elevation="8dp">

    <ImageButton
        android:id="@+id/nav_home"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="Home"
        android:src="@drawable/ic_home"
        android:scaleType="centerInside"
        android:padding="8dp"
        app:tint="#757575" />

    <ImageButton
        android:id="@+id/nav_my_events"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/nav_my_events"
        android:src="@drawable/ic_confirmation_number"
        android:scaleType="centerInside"
        android:padding="8dp"
        app:tint="#757575" />

    <ImageButton
        android:id="@+id/nav_create_event"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/nav_create_event"
        android:src="@drawable/ic_add_box"
        android:scaleType="centerInside"
        android:padding="8dp"
        app:tint="#757575" />

    <ImageButton
        android:id="@+id/nav_scan_qr"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/nav_scan_qr"
        android:src="@drawable/ic_qr_code_scanner"
        android:scaleType="centerInside"
        android:padding="8dp"
        app:tint="#757575" />

    <ImageButton
        android:id="@+id/nav_profile"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/nav_profile"
        android:src="@drawable/ic_person"
        android:scaleType="centerInside"
        android:padding="8dp"
        app:tint="#757575" />
</LinearLayout>